@@ -6,6 +6,7 @@ import com.spring.web.api.backend.hex.domain.order.spi.springdata.mapper.Generic
 import com.spring.web.api.backend.hex.domain.tag.spi.springdata.db.SpringDataTagRepository;
 import com.spring.web.api.backend.hex.domain.order.Order;
 import com.spring.web.api.backend.hex.domain.order.spi.OrderSpi;
+import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,6 +14,7 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Service
 public class OrderDatabaseAdapter implements OrderSpi {
 	private final SpringDataOrderRepository orderRepository;
 	private final SpringDataTagRepository tagRepository;
@@ -28,15 +30,19 @@ public class OrderDatabaseAdapter implements OrderSpi {
 	@Override
 	public Optional<Order> findById(UUID id) {
 		return Optional.of(orderMapper
-				.toDomain(orderRepository
-					.findById(id)
-					.orElseThrow(() -> new RuntimeException("Unable to find order id db"))));
+						.toDomain(orderRepository
+							.findById(id)
+							.orElseThrow(() -> new RuntimeException("Unable to find order id db"))));
 	}
 
 	@Override
 	public List<Order> findAll() {
 		List<Order> orders = new ArrayList<>();
-		orderRepository.findAll().forEach(orderEntity -> orders.add(orderMapper.toDomain(orderEntity)));
+		orderRepository
+			.findAll()
+			.forEach(orderEntity -> orders
+				.add(orderMapper
+					.toDomain(orderEntity)));
 		return orders;
 	}
 
@@ -44,7 +50,12 @@ public class OrderDatabaseAdapter implements OrderSpi {
 	public void save(Order order) {
 		OrderEntity orderEntity = orderMapper.toDbo(order);
 		orderEntity.setTags(
-			order.getTags().stream().map(tag->tagRepository.findByName(tag.getName())).collect(Collectors.toList()));
+			order
+				.getTags()
+				.stream()
+				.map(tag->tagRepository
+					.findByName(tag.getName()))
+				.toList());
 		orderRepository.save(orderEntity);
 	}
 
@@ -56,5 +67,11 @@ public class OrderDatabaseAdapter implements OrderSpi {
 	@Override
 	public boolean existsById(UUID id) {
 		return orderRepository.existsById(id);
+	}
+
+	@Override
+	public void update(Order order) {
+		order.updateOrder();
+		this.save(order);
 	}
 }
